packages/flutter_wasmit/ios/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_ArcStdSyncMutexModule {
  const void *ptr;
} wire_ArcStdSyncMutexModule;
typedef struct wire_RwLockSharedMemory {
  const void *ptr;
} wire_RwLockSharedMemory;
typedef struct wire_WasmitSharedMemory {
  struct wire_RwLockSharedMemory field0;
} wire_WasmitSharedMemory;
typedef struct wire_Atomics {
  uintptr_t field0;
} wire_Atomics;
WireSyncReturn wire_size__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that);
WireSyncReturn wire_data_size__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that);
WireSyncReturn wire_data_pointer__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that);
WireSyncReturn wire_grow__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that,
                                                     uint64_t delta);
void wire_atomics__method__WasmitSharedMemory(int64_t port_, struct wire_WasmitSharedMemory *that);
WireSyncReturn wire_atomic_notify__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that,
                                                              uint64_t addr,
                                                              uint32_t count);
WireSyncReturn wire_atomic_wait32__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that,
                                                              uint64_t addr,
                                                              uint32_t expected);
WireSyncReturn wire_atomic_wait64__method__WasmitSharedMemory(struct wire_WasmitSharedMemory *that,
                                                              uint64_t addr,
                                                              uint64_t expected);
void wire_add__method__Atomics(int64_t port_,
                               struct wire_Atomics *that,
                               uintptr_t offset,
                               int32_t kind,
                               int64_t val,
                               int32_t order);
void wire_load__method__Atomics(int64_t port_,
                                struct wire_Atomics *that,
                                uintptr_t offset,
                                int32_t kind,
                                int32_t order);
void wire_store__method__Atomics(int64_t port_,
                                 struct wire_Atomics *that,
                                 uintptr_t offset,
                                 int32_t kind,
                                 int64_t val,
                                 int32_t order);
void wire_swap__method__Atomics(int64_t port_,
                                struct wire_Atomics *that,
                                uintptr_t offset,
                                int32_t kind,
                                int64_t val,
                                int32_t order);
void wire_compare_exchange__method__Atomics(int64_t port_,
                                            struct wire_Atomics *that,
                                            uintptr_t offset,
                                            int32_t kind,
                                            int64_t current,
                                            int64_t new_value,
                                            int32_t success,
                                            int32_t failure);
void wire_sub__method__Atomics(int64_t port_,
                               struct wire_Atomics *that,
                               uintptr_t offset,
                               int32_t kind,
                               int64_t val,
                               int32_t order);
void wire_and__method__Atomics(int64_t port_,
                               struct wire_Atomics *that,
                               uintptr_t offset,
                               int32_t kind,
                               int64_t val,
                               int32_t order);
void wire_or__method__Atomics(int64_t port_,
                              struct wire_Atomics *that,
                              uintptr_t offset,
                              int32_t kind,
                              int64_t val,
                              int32_t order);
void wire_xor__method__Atomics(int64_t port_,
                               struct wire_Atomics *that,
                               uintptr_t offset,
                               int32_t kind,
                               int64_t val,
                               int32_t order);
struct wire_ArcStdSyncMutexModule new_ArcStdSyncMutexModule(void);