packages/wasmit/lib/src/bridge_generated.io.dart


  late final _wire_size__method__WasmitSharedMemoryPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>>(
      'wire_size__method__WasmitSharedMemory');
  late final _wire_size__method__WasmitSharedMemory =
      _wire_size__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>();

  WireSyncReturn wire_data_size__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
  ) {
    return _wire_data_size__method__WasmitSharedMemory(
      that,
    );
  }

  late final _wire_data_size__method__WasmitSharedMemoryPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>>(
      'wire_data_size__method__WasmitSharedMemory');
  late final _wire_data_size__method__WasmitSharedMemory =
      _wire_data_size__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>();

  WireSyncReturn wire_data_pointer__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
  ) {
    return _wire_data_pointer__method__WasmitSharedMemory(
      that,
    );
  }

  late final _wire_data_pointer__method__WasmitSharedMemoryPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>>(
      'wire_data_pointer__method__WasmitSharedMemory');
  late final _wire_data_pointer__method__WasmitSharedMemory =
      _wire_data_pointer__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>)>();

  WireSyncReturn wire_grow__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
    int delta,
  ) {
    return _wire_grow__method__WasmitSharedMemory(
      that,
      delta,
    );
  }

  late final _wire_grow__method__WasmitSharedMemoryPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>,
              ffi.Uint64)>>('wire_grow__method__WasmitSharedMemory');
  late final _wire_grow__method__WasmitSharedMemory =
      _wire_grow__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitSharedMemory>, int)>();

  void wire_atomics__method__WasmitSharedMemory(
    int port_,
    ffi.Pointer<wire_WasmitSharedMemory> that,
  ) {
    return _wire_atomics__method__WasmitSharedMemory(
      port_,
      that,
    );
  }

  late final _wire_atomics__method__WasmitSharedMemoryPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int64, ffi.Pointer<wire_WasmitSharedMemory>)>>(
      'wire_atomics__method__WasmitSharedMemory');
  late final _wire_atomics__method__WasmitSharedMemory =
      _wire_atomics__method__WasmitSharedMemoryPtr.asFunction<
          void Function(int, ffi.Pointer<wire_WasmitSharedMemory>)>();

  WireSyncReturn wire_atomic_notify__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
    int addr,
    int count,
  ) {
    return _wire_atomic_notify__method__WasmitSharedMemory(
      that,
      addr,
      count,
    );
  }

  late final _wire_atomic_notify__method__WasmitSharedMemoryPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitSharedMemory>,
              ffi.Uint64,
              ffi.Uint32)>>('wire_atomic_notify__method__WasmitSharedMemory');
  late final _wire_atomic_notify__method__WasmitSharedMemory =
      _wire_atomic_notify__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitSharedMemory>, int, int)>();

  WireSyncReturn wire_atomic_wait32__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
    int addr,
    int expected,
  ) {
    return _wire_atomic_wait32__method__WasmitSharedMemory(
      that,
      addr,
      expected,
    );
  }

  late final _wire_atomic_wait32__method__WasmitSharedMemoryPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitSharedMemory>,
              ffi.Uint64,
              ffi.Uint32)>>('wire_atomic_wait32__method__WasmitSharedMemory');
  late final _wire_atomic_wait32__method__WasmitSharedMemory =
      _wire_atomic_wait32__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitSharedMemory>, int, int)>();

  WireSyncReturn wire_atomic_wait64__method__WasmitSharedMemory(
    ffi.Pointer<wire_WasmitSharedMemory> that,
    int addr,
    int expected,
  ) {
    return _wire_atomic_wait64__method__WasmitSharedMemory(
      that,
      addr,
      expected,
    );
  }

  late final _wire_atomic_wait64__method__WasmitSharedMemoryPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitSharedMemory>,
              ffi.Uint64,
              ffi.Uint64)>>('wire_atomic_wait64__method__WasmitSharedMemory');
  late final _wire_atomic_wait64__method__WasmitSharedMemory =
      _wire_atomic_wait64__method__WasmitSharedMemoryPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitSharedMemory>, int, int)>();

  void wire_add__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int val,
    int order,
  ) {
    return _wire_add__method__Atomics(
      port_,
      that,
      offset,
      kind,
      val,
      order,
    );
  }

  late final _wire_add__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int64, ffi.Int32)>>('wire_add__method__Atomics');
  late final _wire_add__method__Atomics =
      _wire_add__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int, int)>();

  void wire_load__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int order,
  ) {
    return _wire_load__method__Atomics(
      port_,
      that,
      offset,
      kind,
      order,
    );
  }

  late final _wire_load__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int32)>>('wire_load__method__Atomics');
  late final _wire_load__method__Atomics =
      _wire_load__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int)>();

  void wire_store__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int val,
    int order,
  ) {
    return _wire_store__method__Atomics(
      port_,
      that,
      offset,
      kind,
      val,
      order,
    );
  }

  late final _wire_store__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int64, ffi.Int32)>>('wire_store__method__Atomics');
  late final _wire_store__method__Atomics =
      _wire_store__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int, int)>();

  void wire_swap__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int val,
    int order,
  ) {
    return _wire_swap__method__Atomics(
      port_,
      that,
      offset,
      kind,
      val,
      order,
    );
  }

  late final _wire_swap__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int64, ffi.Int32)>>('wire_swap__method__Atomics');
  late final _wire_swap__method__Atomics =
      _wire_swap__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int, int)>();

  void wire_compare_exchange__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int current,
    int new_value,
    int success,
    int failure,
  ) {
    return _wire_compare_exchange__method__Atomics(
      port_,
      that,
      offset,
      kind,
      current,
      new_value,
      success,
      failure,
    );
  }

  late final _wire_compare_exchange__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64,
              ffi.Pointer<wire_Atomics>,
              ffi.UintPtr,
              ffi.Int32,
              ffi.Int64,
              ffi.Int64,
              ffi.Int32,
              ffi.Int32)>>('wire_compare_exchange__method__Atomics');
  late final _wire_compare_exchange__method__Atomics =
      _wire_compare_exchange__method__AtomicsPtr.asFunction<
          void Function(
              int, ffi.Pointer<wire_Atomics>, int, int, int, int, int, int)>();

  void wire_sub__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int val,
    int order,
  ) {
    return _wire_sub__method__Atomics(
      port_,
      that,
      offset,
      kind,
      val,
      order,
    );
  }

  late final _wire_sub__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int64, ffi.Int32)>>('wire_sub__method__Atomics');
  late final _wire_sub__method__Atomics =
      _wire_sub__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int, int)>();

  void wire_and__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int val,
    int order,
  ) {
    return _wire_and__method__Atomics(
      port_,
      that,
      offset,
      kind,
      val,
      order,
    );
  }

  late final _wire_and__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int64, ffi.Int32)>>('wire_and__method__Atomics');
  late final _wire_and__method__Atomics =
      _wire_and__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int, int)>();

  void wire_or__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int val,
    int order,
  ) {
    return _wire_or__method__Atomics(
      port_,
      that,
      offset,
      kind,
      val,
      order,
    );
  }

  late final _wire_or__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int64, ffi.Int32)>>('wire_or__method__Atomics');
  late final _wire_or__method__Atomics =
      _wire_or__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int, int)>();

  void wire_xor__method__Atomics(
    int port_,
    ffi.Pointer<wire_Atomics> that,
    int offset,
    int kind,
    int val,
    int order,
  ) {
    return _wire_xor__method__Atomics(
      port_,
      that,
      offset,
      kind,
      val,
      order,
    );
  }

  late final _wire_xor__method__AtomicsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Atomics>, ffi.UintPtr,
              ffi.Int32, ffi.Int64, ffi.Int32)>>('wire_xor__method__Atomics');
  late final _wire_xor__method__Atomics =
      _wire_xor__method__AtomicsPtr.asFunction<
          void Function(int, ffi.Pointer<wire_Atomics>, int, int, int, int)>();

  wire_ArcStdSyncMutexModule new_ArcStdSyncMutexModule() {
    return _new_ArcStdSyncMutexModule();
  }
